Scrollbar bug fix - CSS disable native browser scrollbars

--- a/src/main/webapp/views/resources/css/style.css
+++ b/src/main/webapp/views/resources/css/style.css
@@ -1,3 +1,7 @@
+::-webkit-scrollbar {
+    display: none;
+}
+
 body {
     margin:     0;
     padding:    0;
@@ -42,6 +46,7 @@ div.content {
 div.footer {
     width: 100%;
     height: 40px;
+    overflow: hidden;
     background: #0D47A1;
 }
 
